kubernetes/apps/link-shortener/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: link-shortener
  namespace: link-shortener
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: link-shortener
